app/sass/main.scss
@import 'mixin';

$font-stack-heading: 'Bungee', sans-serif;
$font-stack-body: 'Lato', sans-serif;
$pixel-breakpoint: 768px;

$space: 10px;
$profile-pic-size: 240px;
$social-icon-size: 32px;

$color-bg-base: #F3F3F3;
$color-bg-base-side: #DDDDDD;
$color-bg-base-hover: #DDDDDD;
$color-bg-content: $color-bg-base;
$color-bg-nav: #225378;
$color-bg-nav-hover: #999999;
$color-bg-footer: $color-bg-nav;
$color-bg-side: #CCCCCC;
$color-fg-base: #3E3E3E;
$color-fg-content: #FCFFF5;
$color-fg-nav: #B3B3B3;
$color-fg-nav-hover: #DDDDDD;
$color-fg-footer: $color-bg-base;
$color-fg-side: #333EEE;

body {
  h1, h2, h3 {
    font: 100% $font-stack-heading;
  }

  p {
    font: 100% $font-stack-body;
  }

  color: $color-fg-base;
  margin: 0;
  background: -webkit-linear-gradient(left, $color-bg-base-side, $color-bg-base, $color-bg-base-side);
}

.container {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.container-header {
  background-color: $color-bg-nav;
  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.75);

  a {
    display: inline-block;
    text-align: center;
    text-decoration: none;
    color: $color-fg-nav;
    margin: 0 10px;
    padding: 10px;
  }

  ul {
    list-style-type: none;
    overflow: hidden;
    display: flex;
    justify-content: space-between;
    margin: 0;
    padding: 0;
    width: 100%;

    a {
      font: 150% $font-stack-heading;
      color: $color-fg-nav;
      transition: 0.3s; // TODO: make this a mixin

      &:hover, &:focus {
        color: $color-fg-nav-hover;
        transition: 0.3s; // TODO: make this a mixin
      }
    }
  }
}

nav {
  width: 100%;
  max-width: 960px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.brand {
  margin: 0;

  a {
    h1 {
      font-size: 2rem;
      margin: 2px;
    }

    h2 {
      font-size: 1rem;
    }
  }
}

.container-body {
  display: flex;
  flex: 1 0 auto;
  flex-direction: column;
}

.container-content {
  max-width: 960px;
  display: flex;
  flex: 1;
  align-items: center;
  flex-direction: column;

  h1 {
    font-size: 2.1em;
    margin: 15px 0 0 0;
  }

  hr {
    display: block;
    clear: both;
    height: 1px;
    width: 90%;
  }

  .profile-image {
    width: 180px;
    height: 180px;
    margin: 0.5em;
    border-radius: 50%;
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
    background-image: url('profile.jpg');
    @include animation('fade-in 2s ease-in 0.5s');
  }

  .blurb { 
    line-height: 25px;
    margin: 10px 0;
    padding: 0 10px;
    font-size: 1.2rem;
    text-align: center;
    @include animation('fade-in 1.5s ease-in 1.5s');
  }

  .social {
    display: flex;
    flex-direction: column;
    margin: 30px;
    max-width: 960px;
    flex-grow: 1;
    width: 100%;

    ul {
      display: flex;
      justify-content: center;
      flex-direction: row;
      list-style-type: none;
      padding: 0;
      margin: 0;

      a i {
        text-align: center;
        align-items: center;
        font-size: 2em;
        background-color: $color-bg-nav-hover;
        margin: 0.5em;
        padding: 8px;
        border-radius: 50%;
        transition: 0.4s;
        color: $color-bg-base;

        &:hover { transition: 0.4s; }
      }

      i.icon-github:hover { background-color: #000000; } // TODO: Add tooltip
      i.icon-linkedin:hover { background-color: #0077B5; }
      i.icon-twitter:hover { background-color: #55ACEE; }
    }
  }
}

.container-footer {
  background-color: $color-bg-footer;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  min-height: 128px;
  width: 100%;

  .social {
    display: flex;
    justify-content: center;
    flex-direction: column;
    padding: 16px 0 0 0;
    max-width: 960px;
    justify-content: flex-end;
    flex-grow: 1;
    width: 100%;

    ul {
      display: flex;
      justify-content: center;
      flex-direction: row;
      list-style-type: none;
      padding: 0;
      margin: 0;

      a i {
        text-align: center;
        align-items: center;
        font-size: 1.5em;
        background-color: $color-bg-nav-hover;
        margin: 0.5em;
        padding: 8px;
        border-radius: 50%;
        transition: 0.4s;
        color: $color-bg-base;

        &:hover { transition: 0.4s; }
      }

      i.icon-github:hover { background-color: #000000; } // TODO: Add tooltip
      i.icon-linkedin:hover { background-color: #0077B5; }
      i.icon-twitter:hover { background-color: #55ACEE; }
    }
  }

  .credit {
    max-width: 960px;
    width: 95%;
    color: $color-fg-footer;
    font-size: 0.9rem;
    margin: 15px 0 0 0;

    a {
      color: $color-fg-footer;
    }

    p {
      margin: 0;
      padding: 10px 0;
    }
  }
}

@media only screen and (min-width: $pixel-breakpoint) {
  .container-header {
    display: flex;
    flex-direction: row;
    justify-content: center;

    .brand {
      padding: 10px 0 0 5px;
    }

    nav {
      display: flex;
      flex-direction: row;
      justify-content: space-between;
    }

    ul {
      flex-direction: row;
      justify-content: flex-end;
      width: auto;
      align-items: center;

      a {
        text-align: center;
        margin-right: 10px;
      }
    }
  }

  .container-footer {
    .social {
      flex-direction: row;
      padding: 32px 0 0 0;
    }

    .credit {
      margin: 0;
    }
  }

  .container-body {
    flex-direction: column;
    align-items: center;
  }

  .container-content {
    width: 960px;
    padding: 0 $space;
    margin: 0;

    h1 {
      margin-top: 30px;
    }

    hr {
      width: 95%;
      margin: 20px 0;
    }

    .profile-image {
      width: 220px;
      height: 220px;
    }

    .blurb { 
      line-height: 45px;
      font-size: 1.5rem;
    }
  }
}

